sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:15: error: missing arguments for method copie in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
    while((copie)&&(i-n>0)){
           ^